[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Generator/Generator.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Generator/PlayerDetector.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Generator/WorldCleaner.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 89, 168 )

[node name="Generator" type="Node2D"]
script = ExtResource( 1 )

[node name="Fabrics" type="Node2D" parent="."]

[node name="HellGrounds" type="Node2D" parent="."]

[node name="HeavenGrounds" type="Node2D" parent="."]

[node name="HeavenPlatforms" type="Node2D" parent="."]

[node name="HellPlatforms" type="Node2D" parent="."]

[node name="WorldSwitchers" type="Node2D" parent="."]

[node name="KillerBlocks" type="Node2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 24, 0 )
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="PlayerDetector"]
wait_time = 0.2
autostart = true

[node name="WorldCleaner" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Area" type="Area2D" parent="WorldCleaner"]

[node name="CollisionShape" type="CollisionShape2D" parent="WorldCleaner/Area"]
position = Vector2( -79, 0 )
shape = SubResource( 2 )

[node name="CleanTimer" type="Timer" parent="WorldCleaner"]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="PlayerDetector/MoveTimer" to="PlayerDetector" method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="WorldCleaner/CleanTimer" to="WorldCleaner" method="_on_CleanTimer_timeout"]
